# dotstrap

./: .gitignore  Cargo.toml  README.md  cli-example.md  run-generate.sh  run-init.sh  run-install.sh
src/: action.rs  cli.rs  generation.rs  git.rs  lockfile.rs  main.rs  package.rs  resolver.rs
src/action/: execution.rs  generation.rs  mod.rs  test.rs
src/commands/: add.rs  generate.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs
src/host/: config.rs  mod.rs
src/models/: mod.rs  package_definition.rs
