[package]
name = "dotstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = { version="4", features = ["derive"] }
anyhow = "^1.0.68"
pathbuf = "^0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
serde_with = "2.2.0"
colored = "2.0.0"
promptly = "0.3.1"
